# pytest-lazy-fixtures

./: .gitignore  .pre-commit-config.yaml  README.md  Taskfile.yml  pyproject.toml
.github/workflows/: ci-release.yml  ci-test.yml
pytest_lazy_fixtures/: lazy_fixture_callable.py  loader.py  normalizer.py  plugin.py
tests/: conftest.py  entity.py  test_deadfixtures_support.py  test_injection_from_signature.py  tests.py
