[tool.poetry]
name = "pytest-lazy-fixtures"
version = "1.1.0"
description = "Allows you to use fixtures in @pytest.mark.parametrize."
authors = ["Petrov Anton <antonp2@yandex.ru>"]
readme = "README.md"
license = "MIT"
homepage = "https://github.com/dev-petrov/pytest-lazy-fixtures"
repository = "https://github.com/dev-petrov/pytest-lazy-fixtures"
keywords = ["tests", "pytest", "lazy", "fixture"]
include = [{ path = "tests", format = ["sdist"] }]

[tool.poetry.dependencies]
python = "^3.8"
pytest = ">=7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
pytest-cov = "^4.1.0"
ruff = "^0.3.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.poetry.plugins."pytest11"]
"pytest_lazyfixture" = "pytest_lazy_fixtures.plugin"

[tool.ruff]
line-length = 120
target-version = "py38"
# Exclude a variety of commonly ignored directories.
exclude = [".git", ".venv"]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "C",   # flake8-comprehensions
  "B",   # flake8-bugbear
  "T",   # flake8-print
  "UP",  # pyupgrade
  "N",   # pep8-naming
  "COM", # flake8-commas
  "SIM", # flake8-simplify
]
ignore = ["COM812"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pep8-naming]
classmethod-decorators = ["classmethod"]

[tool.setuptools.package-data]
"pytest-lazy-fixtures" = ["py.typed"]

[[tool.mypy.overrides]]
# Disabled for tests because of dynamic nature of pytest
module = "tests/*"
disable_error_code = ["attr-defined"]
