[project]
name = "pytest-lazy-fixtures"
version = "0.0.0"
description = "Allows you to use fixtures in @pytest.mark.parametrize."
authors = [{ name = "Petrov Anton", email = "antonp2@yandex.ru" }]
requires-python = ">=3.8"
readme = "README.md"
license = "MIT"
keywords = ["tests", "pytest", "lazy", "fixture"]
dependencies = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/dev-petrov/pytest-lazy-fixtures"
Repository = "https://github.com/dev-petrov/pytest-lazy-fixtures"

[project.entry-points.pytest11]
pytest_lazyfixture = "pytest_lazy_fixtures.plugin"

[dependency-groups]
dev = [
  "pre-commit>=3.5.0,<4",
  "pytest-cov>=4.1.0,<5",
  "ruff>=0.3.0,<0.13",
  "mypy>=1.8.0,<2",
  "hatchling>=1.27.0",
  "deptry>=0.20.0",
  "pytest-deadfixtures>=2.2.1",
  "pytest-fixture-classes>=1.0.3",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.coverage.run]
source = ["pytest_lazy_fixtures"]

[tool.coverage.report]
exclude_also = ["if TYPE_CHECKING:"]

[tool.ruff]
line-length = 120
target-version = "py38"
# Exclude a variety of commonly ignored directories.
extend-exclude = [".git", ".venv"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812", "D", "ANN", "SLF001", "TD", "FIX", "ISC001"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "ARG001", "PLR2004"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[[tool.mypy.overrides]]
# Disabled for tests because of dynamic nature of pytest
module = "tests/*"
disable_error_code = ["attr-defined"]
